@@ -207,6 +207,72 @@ void utilPutWord(u8 *p, u16 value)
   *p = (value >> 8) & 255;
 }
 
+void utilWriteBMP(char *buf, int w, int h, u8 *pix)
+{
+  u8 *b = (u8 *)buf;
+
+  int sizeX = w;
+  int sizeY = h;
+
+  switch(systemColorDepth) {
+  case 16:
+    {
+      u16 *p = (u16 *)(pix+(w+1)*(h)*2); // skip first black line
+      for(int y = 0; y < sizeY; y++) {
+        for(int x = 0; x < sizeX; x++) {
+          u16 v = *p++;
+
+          *b++ = ((v >> systemBlueShift) & 0x01f) << 3; // B      
+          *b++ = ((v >> systemGreenShift) & 0x001f) << 3; // G 
+          *b++ = ((v >> systemRedShift) & 0x001f) << 3; // R
+        }
+        p++; // skip black pixel for filters
+        p -= 2*(w+1);
+      }
+    }
+    break;
+  case 24:
+    {
+      u8 *pixU8 = (u8 *)pix+3*w*(h-1);
+      for(int y = 0; y < sizeY; y++) {
+        for(int x = 0; x < sizeX; x++) {
+          if(systemRedShift > systemBlueShift) {
+            *b++ = *pixU8++; // B
+            *b++ = *pixU8++; // G
+            *b++ = *pixU8++; // R           
+          } else {
+            int red = *pixU8++;
+            int green = *pixU8++;
+            int blue = *pixU8++;
+            
+            *b++ = blue;
+            *b++ = green;
+            *b++ = red;
+          }
+        }
+        pixU8 -= 2*3*w;
+      }
+    }
+    break;
+  case 32:
+    {
+      u32 *pixU32 = (u32 *)(pix+4*(w+1)*(h));
+      for(int y = 0; y < sizeY; y++) {
+        for(int x = 0; x < sizeX; x++) {
+          u32 v = *pixU32++;
+
+          *b++ = ((v >> systemBlueShift) & 0x001f) << 3; // B     
+          *b++ = ((v >> systemGreenShift) & 0x001f) << 3; // G
+          *b++ = ((v >> systemRedShift) & 0x001f) << 3; // R
+        }
+        pixU32++;
+        pixU32 -= 2*(w+1);
+      }
+    }
+    break;
+  }  
+}
+
 bool utilWriteBMPFile(char *fileName, int w, int h, u8 *pix)
 {
   u8 writeBuffer[512 * 3];
